# backend/openapi.yaml
@@ -287,6 +287,42 @@ paths:
                   message:
                     type: string
                     example: Fields missing or email already in use.
+    put:
+      tags:
+        - User
+      summary: Update user information
+      description: This endpoint allow you to update your current name, email and/or password. 
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                email:
+                  type: string
+                password:
+                  type: string
+      responses:
+        '200':
+          description: User information successfully updated.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+                example: A section object.
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Fields missing or email already in use.
     delete:
       tags:
       - User
